# Qt-Paint

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/PaintWidget/: PaintWidget.cpp  PaintWidget.hpp
src/PaintWindow/: PaintWindow.cpp  PaintWindow.hpp  PaintWindow.ui
src/model/: Drawable.hpp  Tools.hpp
